--- a/styles/styleMain.css
+++ b/styles/styleMain.css
@@ -3,6 +3,10 @@ header{
     color: rgb(13, 13, 13);
     text-align: center;
     padding: 1em;
+    position: sticky;
+    font-family: "Signika", sans-serif;
+    font-weight: 100;
+
 }
 header .nav-link{
     color: rgb(0, 0, 0);
@@ -10,4 +14,12 @@ header .nav-link{
 header .nav-link:hover{
     color: rgb(204, 143, 244);
     text-decoration: underline;
+}
+main{
+    padding-top: 45px;
+}
+
+.carousel-item img{
+    width: 100%;
+    height: 500px;
 }
