--- a/styles/newArrivalStyle.css
+++ b/styles/newArrivalStyle.css
@@ -1,6 +1,6 @@
 .swiper-container {
     width: 100%;
-    padding: 20px 0;
+    padding: 40px;
   }
   .swiper-slide {
     display: flex;
@@ -12,7 +12,7 @@
     align-items: center;
     justify-content: center;
     width: 150px;
-    height: 150px;
+    height: auto;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 10px;
