--- a/styles/newArrivalStyle.css
+++ b/styles/newArrivalStyle.css
@@ -1,7 +1,24 @@
-.swiper-container {
-    width: 100%;
-    padding: 40px;
+  #newArrivals{
+    position: relative;
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 20px;
   }
+.swiper-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    padding-bottom: 60px; /* Add padding to the bottom of the container */
+  }
+
+  .swiper-button-next, .swiper-button-prev {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 10;
+  }
+
   .swiper-slide {
     display: flex;
     justify-content: center; /* Center the product card in the slide */
