--- a/styles/styleMain.css
+++ b/styles/styleMain.css
@@ -1,11 +1,16 @@
 header{
     background-color: #b7d8fb;
-    color: rgb(13, 13, 13);
     text-align: center;
-    padding: 1em;
-    position: sticky;
+    z-index: 1000;
+    width: 100%;
+    top: 0;
+    position: fixed;
     font-family: "Signika", sans-serif;
     font-weight: 100;
+    padding: 10px 0;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
 
 }
 header .nav-link{
@@ -16,7 +21,7 @@ header .nav-link:hover{
     text-decoration: underline;
 }
 main{
-    padding-top: 45px;
+    padding-top: 100px;
 }
 
 main h1{
@@ -29,5 +34,34 @@ main h1{
 .carousel-item img{
     width: 100%;
     height: 500px;
+}
+
+footer{
+    background-color: #b7d8fb;
+    text-align: center;
+    font-family: "Signika", sans-serif;
+    font-weight: 100;
+    padding: 10px 0;
+    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
+}
+
+footer .nav-link{
+    color: #192a6f;
+}
+
+footer .nav-link:hover{
+    color: #c8bee8;
+    text-decoration: underline;
+}
+
+footer img{
+    width: 40px;
+    height: 40px;
+    margin: 0 10px;
+}
+footer img:hover{
+    transform: scale(1.1);
 }
 
