--- a/styles/productCard.css
+++ b/styles/productCard.css
@@ -18,10 +18,30 @@
     width: 100%;
     height: auto;
     display: block;
+    opacity: 90%;
 }
 .card:hover {
     transform: scale(1.05);
+    opacity: 0.8;
 }
+
+.card-text{
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 20px;
+    font-weight: 200;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    opacity: 100%;
+    z-index: 1;
+    padding: 10px;
+
+}
+
 @media (max-width: 1200px) {
     .card {
         flex: 1 1 calc(33.333% - 20px); /* 3 cards per row on medium screens */
