--- a/styles/styleMain.css
+++ b/styles/styleMain.css
@@ -32,12 +32,22 @@ main h1{
     padding-bottom: 20px;
 }
 
+main p{
+    font-family: "Signika", sans-serif;
+    font-weight: 100;
+    font-size: 15px;
+    text-align: center;
+    padding: 20px;
+    color: #192a6f;
+
+}
+
 .carousel-item img{
     width: 100%;
     height: 500px;
 }
 
-footer{
+footer {
     background-color: #b7d8fb;
     text-align: center;
     font-family: "Signika", sans-serif;
@@ -46,6 +56,9 @@ footer{
     box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: center;
+    position: relative;
+    width: 100%;
+    bottom: 0;
 }
 
 footer .nav-link{
