--- a/styles/productStyle.css
+++ b/styles/productStyle.css
@@ -1,8 +1,8 @@
 .prod-nav{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 10px;
     background-color: #f5f5f5;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
