--- a/styles/productStyle.css
+++ b/styles/productStyle.css
@@ -18,3 +18,13 @@
     color: #c8bee8;
     text-decoration: underline;
 }
+
+.card{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    margin: 10px;
+    background-color: #f5f5f5;
+}
